[gd_scene load_steps=14 format=3 uid="uid://c8r3hm3ndbeex"]

[ext_resource type="Script" path="res://Entities/DropPod.gd" id="1_cpulu"]
[ext_resource type="Texture2D" uid="uid://cq8ov6nm5cdtd" path="res://Shared/drop_pod2.png" id="2_wuv3d"]
[ext_resource type="Texture2D" uid="uid://dl3vwkkcreusg" path="res://Shared/drop_pod2_half.png" id="3_af6gg"]
[ext_resource type="Texture2D" uid="uid://d20sp4111xb8x" path="res://Shared/small_fire.png" id="3_rxl2h"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ho0rj"]
atlas = ExtResource("3_rxl2h")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_relrs"]
atlas = ExtResource("3_rxl2h")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_2d8ic"]
atlas = ExtResource("3_rxl2h")
region = Rect2(16, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnit0"]
atlas = ExtResource("3_rxl2h")
region = Rect2(24, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_ef61f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ho0rj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_relrs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2d8ic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnit0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_wltt7"]
resource_name = "land"
length = 5.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 0.7, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"land"
}, {
"args": [],
"method": &"open"
}, {
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LeftShell:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RightShell:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/path = NodePath("Sprite2D:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(),
"points": PackedFloat32Array(),
"times": PackedFloat32Array()
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-399, -0.25, 0, 0.1, 13, 0, -0.1, -2, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite2D/AnimatedSprite2D:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Sprite2D/AnimatedSprite2D2:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="Animation" id="Animation_2et26"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xxkgc"]
_data = {
"RESET": SubResource("Animation_2et26"),
"land": SubResource("Animation_wltt7")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0idss"]
size = Vector2(9, 16)

[node name="DropPod" type="Node2D"]
position = Vector2(153, 84)
script = ExtResource("1_cpulu")
velocity_min = Vector2i(200, 5)
velocity_max = Vector2i(400, 10)
angular_veclocity_min = 1
angular_veclocity_max = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -399)
texture = ExtResource("2_wuv3d")
offset = Vector2(0, -3)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Sprite2D"]
visible = false
position = Vector2(-4, 12)
sprite_frames = SubResource("SpriteFrames_ef61f")
autoplay = "default"
frame_progress = 0.388584

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="Sprite2D"]
visible = false
position = Vector2(3, 12)
sprite_frames = SubResource("SpriteFrames_ef61f")
autoplay = "default"
frame_progress = 0.968458

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "land"
libraries = {
"": SubResource("AnimationLibrary_xxkgc")
}

[node name="LeftShell" type="RigidBody2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 11
mass = 0.05
gravity_scale = 0.0
linear_damp = 15.0

[node name="Sprite2D" type="Sprite2D" parent="LeftShell"]
position = Vector2(-8, 0)
texture = ExtResource("3_af6gg")
offset = Vector2(7, -3)
flip_h = true
region_rect = Rect2(0, 0, 16, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftShell"]
position = Vector2(-4, 0)
shape = SubResource("RectangleShape2D_0idss")
disabled = true

[node name="RightShell" type="RigidBody2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 11
mass = 0.05
gravity_scale = 0.0
linear_damp = 15.0

[node name="Sprite2D" type="Sprite2D" parent="RightShell"]
position = Vector2(8, 0)
texture = ExtResource("3_af6gg")
offset = Vector2(-6, -3)
region_rect = Rect2(16, 0, 16, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightShell"]
position = Vector2(5, 0)
shape = SubResource("RectangleShape2D_0idss")
disabled = true
